<resources>
    <string name="app_name">Hey Farmers</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="logo">TODO</string>
    <string name="button_text">Login</string>
    <string name="hey_farmers">Hey Farmers</string>
    <string name="hey_farmers1">Hey Farmers</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="account_name">ACCOUNT NAME</string>
    <string name="logout">Logout</string>
    <string name="not_a_user_register_here">Not a User? Register here</string>
</resources>