<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="111dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="109dp"
            android:text="@string/change_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="188dp"
            android:layout_height="175dp"
            android:layout_marginStart="111dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="112dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile_icon" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="193dp"
            android:layout_height="49dp"
            android:layout_marginStart="111dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="107dp"
            android:ems="10"
            android:hint="@string/account_name"
            android:inputType="textPersonName"
            android:textColorHint="#A1887F"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="141dp"
            android:layout_height="54dp"
            android:layout_marginStart="138dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="128dp"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="193dp"
            android:layout_height="48dp"
            android:layout_marginStart="111dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="107dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>